heavy consolidation